<resources>
    <string name="app_name">Give3</string>
    <string name="transition_card">card</string>
    <string name="transition_menu">menu</string>

    <!-- Tags &  Titles-->
    <string name="assessment">Assessment</string>
    <string name="sections">Sections</string>
    <string name="section">Section</string>
    <string name="section_with_number">Section #</string>
    <string name="tasks">Tasks</string>
    <string name="task">Task</string>

    <!-- Empty text representation-->
    <string name="empty_number">#</string>
    <string name="empty_number_status">#/#</string>
    <string name="empty_text">Text here…</string>
    <string name="empty_name_text">Name…</string>
    <string name="empty_task_text">Task…</string>
    <string name="empty_sections_text">Section…</string>

    <!-- Button titles-->
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add">Add</string>
    <string name="download">To .csv</string>


</resources>
