<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SectionSquadActivity"
    android:background="@color/colorPrimary"
    android:transitionName="@string/transition_card">

    <TextView
        android:id="@+id/text_section_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/section_with_number"
        android:textSize="30sp"
        android:textStyle="bold"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ListView
        android:id="@+id/listview_section_squad"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="8dp"
        app:layout_constraintBottom_toTopOf="@id/clayout_edit_section_bottom_buttons"
        app:layout_constraintTop_toBottomOf="@id/text_section_title"/>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/clayout_edit_section_bottom_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:background="@drawable/background_bottom_buttons"
        android:elevation="15dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <Button
            android:id="@+id/button_section_squad_add"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/baseline_person_add_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_section_squad_done"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="@+id/button_section_squad_add"
            app:layout_constraintStart_toStartOf="@+id/button_section_squad_add"
            app:layout_constraintTop_toBottomOf="@+id/button_section_squad_add" />

        <Button
            android:id="@+id/button_section_squad_done"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/baseline_done_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="@+id/button_section_squad_done"
            app:layout_constraintStart_toStartOf="@+id/button_section_squad_done"
            app:layout_constraintTop_toBottomOf="@+id/button_section_squad_done" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>