<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity"
    android:background="@color/colorPrimary"
    >

    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_main_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_main_buttons"
        android:elevation="10dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button_sections"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:background="@drawable/baseline_group_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sections"
            android:textSize="36sp"
            android:textStyle="bold"
            android:typeface="normal"
            app:layout_constraintEnd_toEndOf="@id/button_sections"
            app:layout_constraintStart_toStartOf="@id/button_sections"
            app:layout_constraintTop_toBottomOf="@id/button_sections" />

        <Button
            android:id="@+id/button_tasks"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:background="@drawable/baseline_check_box_24"
            app:layout_constraintStart_toEndOf="@id/button_sections" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tasks"
            android:textSize="36sp"
            android:textStyle="bold"
            android:typeface="sans"
            app:layout_constraintEnd_toEndOf="@id/button_tasks"
            app:layout_constraintStart_toStartOf="@id/button_tasks"
            app:layout_constraintTop_toBottomOf="@id/button_tasks" />

    </android.support.constraint.ConstraintLayout>

    <TextView
        android:id="@+id/text_count_sections"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="7dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/background_count_tag"
        android:translationY="-15dp"
        android:text="@string/empty_number"
        android:textSize="36sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@+id/layout_main_buttons"
        app:layout_constraintTop_toBottomOf="@+id/layout_main_buttons" />


    <TextView
        android:id="@+id/text_count_tasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="7dp"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:background="@drawable/background_count_tag"
        android:translationY="-15dp"
        android:text="@string/empty_number"
        android:textSize="36sp"
        android:textColor="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="@+id/layout_main_buttons"
        app:layout_constraintTop_toBottomOf="@+id/layout_main_buttons" />

    <LinearLayout
        android:id="@+id/layout_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@drawable/background_bottom_buttons"
        android:elevation="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">
        <Button
            android:id="@+id/button_section_done"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/baseline_done_24"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:typeface="sans" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>